--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,9 @@
 @tailwind utilities;
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  padding: 2rem 4rem;
+  max-width: 100rem;
 }
 
 .grida > * {
