--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,10 @@ body:not(.disable-row-hover) .row:hover div {
   background-color: #525252;
 }
 
+body:not(.disable-row-hover) .row:hover > div {
+  box-shadow: inset 0 1px 0 #71717a, 0 1px 0 hsla(0, 0%, 0%, 0.5);
+}
+
 @media (max-width: 1024px) {
   .grid-area-lastUpdated {
     display: none;
