--- a/src/index.css
+++ b/src/index.css
@@ -9,25 +9,57 @@ body {
   background-color: rgb(38, 38, 38);
 }
 
-.grida > * {
-  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
-}
-
 [type="checkbox"]:focus,
 [type="radio"]:focus,
 [type="text"]:focus {
   box-shadow: none;
 }
 
-.grid-mods {
-  //grid-template-areas: "enabled packName packName packName packName packName humanName humanName humanName humanName humanName";
+.grid-mods,
+.grid-mods-thumbs,
+.grid-mods-author,
+.grid-mods-thumbs-author {
   grid-template-columns: 57px 80px 1fr 1fr;
+}
+
+.grid-column-4,
+.grid-column-5,
+.grid-column-6,
+.grid-column-7 {
+  grid-column: span 4 / span 4;
 }
 
 @media (min-width: 1024px) {
   .grid-mods {
     grid-template-columns: 57px 80px 1fr 1fr 0.5fr;
-    //grid-template-areas: "enabled packName packName packName packName packName humanName humanName humanName humanName humanName lastUpdated lastUpdated lastUpdated lastUpdated";
+  }
+  .grid-mods-thumbs {
+    grid-template-columns: 57px 80px max-content 1fr 1fr 0.5fr;
+  }
+  .grid-mods-author {
+    grid-template-columns: 57px 80px 1fr 1fr 0.5fr 0.5fr;
+  }
+  .grid-mods-thumbs-author {
+    grid-template-columns: 57px 80px max-content 1fr 1fr 0.5fr 0.5fr;
+  }
+
+  .drop-ghost {
+    border: 3px dotted #666;
+    width: 100%;
+    height: 2rem;
+  }
+
+  .grid-column-4 {
+    grid-column: span 4 / span 4;
+  }
+  .grid-column-5 {
+    grid-column: span 5 / span 5;
+  }
+  .grid-column-6 {
+    grid-column: span 6 / span 6;
+  }
+  .grid-column-7 {
+    grid-column: span 7 / span 7;
   }
 }
 
@@ -35,16 +67,6 @@ body {
   border: 3px dotted #666;
   width: 100%;
   height: 2rem;
-  grid-column: span 4 / span 4;
-}
-
-@media (min-width: 1024px) {
-  .drop-ghost {
-    border: 3px dotted #666;
-    width: 100%;
-    height: 2rem;
-    grid-column: span 5 / span 5;
-  }
 }
 
 .row {
@@ -68,7 +90,7 @@ body:not(.disable-row-hover) .row:hover > div {
 }
 
 @media (max-width: 1024px) {
-  .grid-area-lastUpdated {
+  .grid-area-autohide {
     display: none;
   }
 }
