--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,10 @@ body:not(.disable-row-hover) .row:hover > div {
   width: 100%;
 }
 
+.make-tooltip-inline > div:first-of-type {
+  display: inline;
+}
+
 .mod-row-header {
   background-color: #404040;
   padding: 0.5rem;
