--- a/src/index.css
+++ b/src/index.css
@@ -295,3 +295,7 @@ body:not(.disable-row-hover) .row:hover > div:not(.drop-ghost) {
 .modalDontOverflowWindowHeight {
   max-height: calc(100% - 2rem);
 }
+
+.modalGiveChildVisibleOverflow > :first-child {
+  overflow: visible;
+}
