--- a/src/index.css
+++ b/src/index.css
@@ -225,7 +225,7 @@ body {
   display: contents;
 }
 
-.row div {
+.row-div-paddings div {
   padding: 0.25rem;
 }
 
@@ -233,11 +233,11 @@ body {
   background-color: #525252;
 }
 
-body:not(.disable-row-hover) .row:hover div:not(.drop-ghost) {
+body:not(.disable-row-hover) .row-hover-highlight:hover div:not(.drop-ghost) {
   background-color: #525252;
 }
 
-body:not(.disable-row-hover) .row:hover > div:not(.drop-ghost) {
+body:not(.disable-row-hover) .row-hover-highlight:hover > div:not(.drop-ghost) {
   box-shadow: inset 0 1px 0 #71717a, 0 1px 0 hsla(0, 0%, 0%, 0.5);
 }
 
@@ -268,6 +268,7 @@ body:not(.disable-row-hover) .row:hover > div:not(.drop-ghost) {
   padding: 0.5rem;
   position: sticky;
   top: -2.75rem;
+  z-index: 11;
 }
 
 #top-bar {
@@ -380,4 +381,9 @@ body:not(.disable-row-hover) .row:hover > div:not(.drop-ghost) {
   padding: 1rem;
   background-repeat: no-repeat;
   background-size: 100% 100%;
+}
+
+/* it's by default 'will-change: transform;' but this changes text colors */
+.ReactVirtualized__Grid {
+  will-change: auto !important;
 }
