new feature: queue game relaunch while the game is still running

--- a/src/index.css
+++ b/src/index.css
@@ -387,3 +387,16 @@ body:not(.disable-row-hover) .row-hover-highlight:hover > div:not(.drop-ghost) {
 .ReactVirtualized__Grid {
   will-change: auto !important;
 }
+
+.dots-loader {
+  width: 60px;
+  aspect-ratio: 4;
+  background: radial-gradient(circle closest-side, #fff 90%, #0000) 0 / calc(100% / 3) 100% space;
+  clip-path: inset(0 100% 0 0);
+  animation: dots-loader 1.75s steps(4) infinite;
+}
+@keyframes dots-loader {
+  to {
+    clip-path: inset(0 -34% 0 0);
+  }
+}
